--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--
 #container{
     width:550px;
-    height:300px;
+    height:301px;
     border:1px solid #000; 
     overflow:hidden;
     margin-left:0%;
@@ -29,7 +29,7 @@
 <body>
 
 <div id="container">
-<iframe src="http://www.textsheet.com/" scrolling="no"></iframe>
+    <iframe src="http://www.textsheet.com/" scrolling="yes" align ="middle"></iframe>
 </div><center>
     <h2>Instructions:</h2>
     <p>To use the tool, find the chegg Q/A link.  <a href="https://www.chegg.com/study/qa">Here </a> </p>
