--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<div id="container">
+<div id="container" class="scroll-wrapper">>
     <iframe src="http://www.textsheet.com/" scrolling="yes"></iframe>
 </div><center>
     <h2>Instructions:</h2>
