--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 <div id="container" class="scroll-wrapper">>
-    <iframe src="http://www.textsheet.com/" scrolling="yes"></iframe>
+    <iframe src="http://www.textsheet.com/" scrolling="yes" align = "middle"></iframe>
 </div><center>
     <h2>Instructions:</h2>
     <p>To use the tool, find the chegg Q/A link.  <a href="https://www.chegg.com/study/qa">Here </a> </p>
