--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     height:300px;
     border:1px solid #000; 
     overflow:hidden;
+    
     margin-left:0%;
     margin-top:0%;
 
@@ -28,7 +29,7 @@
 </head>
 <body>
 
-<div id="container" class="scroll-wrapper">>
+<div id="container" -webkit-overflow-scrolling:touch>
     <iframe src="http://www.textsheet.com/" scrolling="yes" align = "middle"></iframe>
 </div><center>
     <h2>Instructions:</h2>
